--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <!--Import Google Icon Font-->
@@ -30,7 +30,7 @@
       <div class="col s6 offset-s3">
         <!-- Don't Worry About anything before this point -->
       <h2 class="header">Grad Party 2017</h2>
-      <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->This page will have all the detail for the Nps Hsr Grad Party From date to venue to how to pay and other details.<!-- Stop editing here--></p></div>
+      <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->This page will have all the details required for the Nps Hsr Grad Party including date,venue, payment options and other details.<!-- Stop editing here--></p></div>
        </div>
         <div class="row container">
         <div class="col s6 offset-s3">
@@ -38,7 +38,7 @@
             <h2 class="center brown-text"><i class="material-icons">place</i></h2>
            
             <h4 class="center">Venue and Timings</h5>
-            <p class="light"> <h6><!-- Following this is text you can modify -->The Grad Party Will Be Held At Holiday Inn, <b>From 6 pm onwards to 11:30 pm on the 8th of April</b>.</p><p> <h6>This event is invite only, anyone without a valid invite will not be permitted inside the venue.<!-- Stop editing here--></p>
+            <p class="light"> <h6><!-- Following this is text you can modify -->The Grad Party will be held at Holiday Inn, <b>From 6 pm to 11:30 pm on the 8th of April</b>.</p><p> <h6>Permit to be present at the event is based on invite only, anyone without a valid invite will not be permitted at the venue.<!-- Stop editing here--></p>
   <!-- DO NOT TOUCH THIS PLEASE -->   <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2403390253126!2d77.73204431482186!3d12.956466990865842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae120dd4645349%3A0xa0e357ce13068e3f!2sHoliday+Inn+%26+Suites+Bengaluru+Whitefield!5e0!3m2!1sen!2sin!4v1485192460954" width="400" height="600" frameborder="0" style="border:0" allowfullscreen></iframe></div>      </h6>
           </div>
@@ -49,18 +49,18 @@
     <div class="row container">
       <div class="col s6 offset-s3">
        <h2 class="header center">Dress Code</h2>
-      <p class="grey-text text-darken-3 lighten-3">The Dress Code is Semi-Formals(No Jeans), You can wear formals if you want.</p></div></div></div>
+      <p class="grey-text text-darken-3 lighten-3">The Dress Code is Semi-Formals(No Jeans) (You can wear formals if you please.)</p></div></div></div>
   <div class="section white">
     <div class="row container">
       <div class="col s6 offset-s3">
        <h2 class="header center">Payments</h2>
-      <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->Each person must pay a sum of <b>1400INR</b> for the Grad Party. Each Person Must also give their name and <b>email Ids</b>.Invites will be given out only once payments is made, invites will be directly emailed to the email id provided<!-- Stop editing here--></p></div>
+      <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->Each person must pay a sum of <b>1400INR</b> for the Grad Party. Each person must also submit their name and <b>email ids at the time of payment.</b>.Invites will be given out only once payments is made, invites will be directly emailed to the email id provided<!-- Stop editing here--></p></div>
       </div><div class="row container">
      <ul class="collapsible popout" data-collapsible="accordion">
     <li>
       <div class="collapsible-header"><i class="material-icons">credit_card</i>Online Payment</div>
       <div class="collapsible-body">
-						<p><!-- Following this is text you can modify -->For Online payments One must pay to bank account then below and <b> while using the payment gateway they must comment thier name and then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
+						<p><!-- Following this is text you can modify -->For Online payments, one must pay to bank account given below and <b> while using the payment gateway they must comment thier name and then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
 						<p>Payment Details are:
 						<br>Name of Bank : YES BANK
 						<br>Name of Account : Rahul T Balaji
@@ -76,7 +76,7 @@
     </li>
     <li>
       <div class="collapsible-header active"><i class="material-icons">dollar</i>Physical Payment</div>
-      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Physical Payment Each Class Has a Different Person to Pay To and We request you to bring correct change and not ask for change.<b>Also for physical payments the last day will be the 14th of Feb.</b></p>
+      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payment through cash, each Class must pay to the people listed below. We request you to bring the correct amount.NO CHANGE WILL BE GIVEN.<b>Also paying through cash the last day will be the 14th of Feb.</b></p>
       <p>For 10A the money should be paid to Vibha.</p><p>For 10B the money should be paid to Rima.</p><p>For 10C the money should be paid to Manasvi.<!-- Stop editing here--></p></div>
     </li>
   </ul>
