--- a/index.html
+++ b/index.html
@@ -57,18 +57,20 @@
       <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->Each person must pay a sum of <b>1400INR</b> for the Grad Party. Each person must also submit their name and <b>email ids at the time of payment.</b>.Invites will be given out only once payments is made, invites will be directly emailed to the email id provided<!-- Stop editing here--></p></div>
       </div><div class="row container">
      <ul class="collapsible popout" data-collapsible="accordion">
+       <!--
     <li>
+      
       <div class="collapsible-header"><i class="material-icons">credit_card</i>Online Payment</div>
       <div class="collapsible-body">
-						<p><!-- Following this is text you can modify -->For Online payments, one must pay to bank account given below and <b> while using the payment gateway they must comment thier name and then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
+						<p> For Online payments, one must pay to bank account given below and <b> while using the payment gateway they must comment thier name and then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
 						<p>Payment Details are:
 						<br>Name of Bank : YES BANK
 						<br>Name of Account : Rahul T Balaji
 						<br>Branch of Bank : Koramangala
 						<br>Account Number : 019890100006572
-						<br> IFSC CODE : YESB0000198 <!-- Stop editing here-->
+						<br> IFSC CODE : YESB0000198
 					</p></p></div>
-    </li>
+    </li> -->
     <li>
       <div class="collapsible-header"><i class="material-icons">payment</i>Paytm</div>
       <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payments throught Paytm, One must send the required sum of money to Yashvi's Paytm Account and <b> then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
