--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
        <h2 class="header center">Payments</h2>
       <p class="grey-text text-darken-3 lighten-3"><!-- Following this is text you can modify -->Each person must pay a sum of <b>1400INR</b> for the Grad Party. Each person must also submit their name and <b>email ids at the time of payment.</b>.Invites will be given out only once payments is made, invites will be directly emailed to the email id provided<!-- Stop editing here--></p></div>
       </div><div class="row container">
-        <p class="light">Payments are Officially Closed. Tho if you hurry you might still be able to pay and come for the Grad Party, For this please contact and talk to <a href="mailto:rahultarak12345@gmail.com" target="_blank">Rahul Tarak</a></p>
-    <!-- <ul class="collapsible popout" data-collapsible="accordion">
-       
+     <ul class="collapsible popout" data-collapsible="accordion">
+       <!--
     <li>
       
       <div class="collapsible-header"><i class="material-icons">credit_card</i>Online Payment</div>
@@ -69,23 +68,23 @@
 						<br>Name of Account : Rahul T Balaji
 						<br>Branch of Bank : Koramangala
 						<br>Account Number : 019890100006572
-						<br> IFSC CODE : YESB0000198
+						<br> IFSC CODE : YESB0000198 
 					</p></p></div>
-    </li> 
+    </li> -->
     <li>
       <div class="collapsible-header"><i class="material-icons">payment</i>Paytm</div>
-      <div class="collapsible-body"><p>For Payments throught Paytm, One must send the required sum of money to Yashvi's Paytm Account and <b> then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
-      <p>Paytm Phone Number is <a href="tel:09845922686">09845922686</a></p></div>
+      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payments throught Paytm, One must send the required sum of money to Yashvi's Paytm Account and <b> then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
+      <p>Paytm Phone Number is <a href="tel:9845922686">9845922686</a></p><!-- Stop editing here--></div>
     </li>
     <li>
       <div class="collapsible-header active"><i class="material-icons">dollar</i>Physical Payment</div>
-      <div class="collapsible-body"><p>For Payment through cash, each Class must pay to the people listed below. We request you to bring the correct amount.NO CHANGE WILL BE GIVEN.<b>Also paying through cash the last day will be the 14th of Feb.</b></p>
-      <p>For 10A the money should be paid to Vibha.</p><p>For 10B the money should be paid to Rima.</p><p>For 10C the money should be paid to Manasvi.</p></div>
+      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payment through cash, each Class must pay to the people listed below. We request you to bring the correct amount.NO CHANGE WILL BE GIVEN.<b>Also paying through cash the last day will be the 14th of Feb.</b></p>
+      <p>For 10A the money should be paid to Vibha.</p><p>For 10B the money should be paid to Rima.</p><p>For 10C the money should be paid to Manasvi.<!-- Stop editing here--></p></div>
     </li>
   </ul>
   </div>
    </div>
-   -->
+   
   
   <!-- DO NOT EDIT ANYTHING BELOW -->
   <script type="text/javascript" src="">
