--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </li> -->
     <li>
       <div class="collapsible-header"><i class="material-icons">payment</i>Paytm</div>
-      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payments throught Paytm, One must send the required sum of money to Yashvi's Paytm Account and <b> then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
-      <p>Paytm Phone Number is <a href="tel:9845922686">9845922686</a></p><!-- Stop editing here--></div>
+      <div class="collapsible-body"><p><!-- Following this is text you can modify -->For Payments throught Paytm, One must send the required sum of money to Rahul's Paytm Account and <b> then send the proof of payment transaction to <a href="mailto:npshsrgrad2017@gmail.com" target="_blank">npshsrgrad2017@gmail.com</a> or <a href="mailto:rahultarak12345@gmail.com" target="_blank">rahultarak12345@gmail.com</a></b></p>
+      <p>Paytm Phone Number is <a href="tel:9620588040">9620588040</a></p><!-- Stop editing here--></div>
     </li>
     <li>
       <div class="collapsible-header active"><i class="material-icons">dollar</i>Physical Payment</div>
